--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  line-height: 24px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+input[type='text'] {
+  line-height: 36px;
+  font-size: 14px;
+  height: 36px;
+  border: none;
+  padding: 0 8px;
+  border: 1px solid pink;
+  outline: none;
+}
+
+button {
+  background-color: pink;
+  padding: 0 16px;
+  display: inline-block;
+  border: none;
+  cursor: pointer;
+  line-height: 36px;
+  font-size: 14px;
+  height: 36px;
+  text-decoration: none;
 }
