Setting up Redux.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,15 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
 }
 
 .main {
   text-align: left;
-}
-
-.list {
-  list-style: none;
-  padding-left: 0;
-  font-size: 14px;
 }
