--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 24px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -21,12 +21,13 @@ input[type='text'] {
   height: 36px;
   border: none;
   padding: 0 8px;
-  border: 1px solid pink;
+  border: 1px solid #333;
   outline: none;
 }
 
-button {
-  background-color: pink;
+.btn {
+  background-color: #333;
+  color: #fff;
   padding: 0 16px;
   display: inline-block;
   border: none;
@@ -35,4 +36,15 @@ button {
   font-size: 14px;
   height: 36px;
   text-decoration: none;
+}
+
+.btn-sm {
+  padding: 0 8px;
+  line-height: 24px;
+  font-size: 12px;
+  height: 24px;
+}
+
+.btn-danger {
+  background-color: red;
 }
